# ito

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  dist-workspace.toml
crates/yamlito/: Cargo.toml  builder.rs  debug.rs  error.rs  fixers.rs  lexer.rs  lib.rs  parser.rs
crates/yamlito/ast/: collections.rs  comment.rs  decode.rs  mod.rs  nodes.rs  scalar.rs  trivia.rs  value.rs
crates/yamlito/edit/: build.rs  entry.rs  mod.rs
crates/yamlito/scripting/: comment.rs  cursor.rs  fs.rs  lint.rs  mod.rs  resolver.rs
crates/yamlito/syntax/: kind.rs  mod.rs  tree.rs  tree_utils.rs
crates/yamlito/tests/: parser.rs
crates/yamlito/tests/snapshots/: parser__ast_snapshots@block__empty_mapping_values.yml.snap  parser__ast_snapshots@block__empty_sequence_entry.yml.snap  parser__ast_snapshots@block__mapping_deeply_nested.yml.snap  parser__ast_snapshots@block__mapping_multiline_value.yml.snap  parser__ast_snapshots@block__mixed_nested.yml.snap  parser__ast_snapshots@block__sequence_nested.yml.snap  parser__ast_snapshots@comment__between_entries.yml.snap  parser__ast_snapshots@comment__flow_mapping.yml.snap  parser__ast_snapshots@comment__flow_sequence.yml.snap  parser__ast_snapshots@comment__inside_mapping.yml.snap  parser__ast_snapshots@comment__inside_sequence.yml.snap  parser__ast_snapshots@comment__leading.yml.snap  parser__ast_snapshots@comment__only_comments.yml.snap  parser__ast_snapshots@comment__trailing.yml.snap  parser__ast_snapshots@flow__empty_mapping_value.yml.snap  parser__ast_snapshots@flow__mapping_multiline.yml.snap  parser__ast_snapshots@flow__mapping_nested.yml.snap  parser__ast_snapshots@flow__mapping_with_sequence_value.yml.snap  parser__ast_snapshots@flow__sequence_multiline.yml.snap  parser__ast_snapshots@flow__sequence_nested.yml.snap  parser__ast_snapshots@flow__sequence_simple.yml.snap  parser__ast_snapshots@scalar__bool_false.yml.snap  parser__ast_snapshots@scalar__bool_true.yml.snap  parser__ast_snapshots@scalar__double_quoted.yml.snap  parser__ast_snapshots@scalar__empty.yml.snap  parser__ast_snapshots@scalar__float.yml.snap  parser__ast_snapshots@scalar__folded_block.yml.snap  parser__ast_snapshots@scalar__integer.yml.snap  parser__ast_snapshots@scalar__literal_block.yml.snap  parser__ast_snapshots@scalar__null.yml.snap  parser__ast_snapshots@scalar__plain.yml.snap  parser__ast_snapshots@scalar__single_quoted.yml.snap  parser__ast_snapshots@stream__header_with_comment.yml.snap  parser__ast_snapshots@stream__multi_document.yml.snap  parser__ast_snapshots@stream__multi_document_mixed_types.yml.snap  parser__ast_snapshots@stream__multi_document_with_comments.yml.snap  parser__ast_snapshots@stream__multi_document_with_footers.yml.snap  parser__ast_snapshots@stream__single_with_footer.yml.snap  parser__ast_snapshots@stream__single_with_header.yml.snap  parser__ast_snapshots@stream__single_with_header_and_footer.yml.snap  (+40 more)
crates/yamlito/tests/yaml/block/: empty_mapping_values.yml  empty_sequence_entry.yml  (+2 more)
ito/: Cargo.toml  cli.rs  help.rs  imports.rs  lib.rs  main.rs
ito/scripting/: args.rs  j2.rs  json.rs  mod.rs  path.rs  pathmap.rs  proc.rs  re.rs  string.rs  toml.rs  version.rs  vfs.rs  yaml.rs
ito/scripting/hcl/: convert.rs  edit.rs  mod.rs  types.rs  visit.rs
ito/tests/: hcl_edit.rs
(+49 files in other folders)
