[package]
name = "ito"
version = "0.2.0"
edition = "2024"
authors = ["Dennis Frenken", "Scopevisio Devops GmbH"]
description = "A Rhai script runner with a small standard library for inspecting and generating config files"
homepage = "https://github.com/denfren/ito"
repository = "https://github.com/denfren/ito"
license = "MIT"
keywords = ["rhai", "config", "yaml", "toml", "hcl"]
categories = ["command-line-utilities"]

[[bin]]
name = "ito"
path = "main.rs"

[lib]
path = "lib.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
globset.workspace = true
hcl-rs.workspace = true
minijinja.workspace = true
regex.workspace = true
rhai.workspace = true
semver.workspace = true
serde_json.workspace = true
similar.workspace = true
thiserror.workspace = true
termimad.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wait-timeout.workspace = true
yamlito.workspace = true
